header z-index bug fixed

--- a/client/styles/components/_main.styl
+++ b/client/styles/components/_main.styl
@@ -36,29 +36,35 @@ body
     
 //Header
 header
-    shadow-level(2)
     color #FFF 
     background dark-blue
     padding 20px 
     fixed top left
     width 100%
     height 45px 
-    z-index z.header
+    z-index: z.header
+    shadow-level(2)
     a
         color white
         text-decoration none
+    .fa-bars
+        float left
+        margin -15px 0 0 0
+        &:hover
+            cursor pointer
+            color light-grey
     .logo
         +below($small)
             display none  
         font-weight 300
-        margin -10px 0 0 0
-        font-size 18px
+        margin -15px 0 0 10px
+        font-size 32px
         letter-spacing 10px
         float left
     .logo::first-letter
         font-weight bold
     .login-buttons-dropdown-align-
-        margin-top -5px
+        // margin-top -10px
         float right
         a
             color #FFF
@@ -79,12 +85,6 @@ header
 i:focus
     outline none
      
-.fa-bars
-    float left
-    margin -15px 15px 0 -5px
-    &:hover
-        cursor pointer
-        color light-grey
 	
 .fa-dot-circle-o
     color red
